# ltrace

./: .gitignore  BUGS  ChangeLog  INSTALL  KK  Makefile  Makefile.am  Makefile.in  README  THOUGHTS  TODO  acconfig.h  aclocal.m4  all.h  autogen.sh  breakpoints.c  common.h  config.h.in  config_file.c  config_file.h  configure  configure.ac  configure.in  debug.c  debug.h  defs.h  demangle.c  demangle.h  dict.c  dict.h  display_args.c  elf.c  elf.h  execute_program.c  functions.c  functions.h  handle_event.c  i386.c  i386.h  libltrace.c  (+31 more)
debian/: changelog  conffiles  control  control.in  copyright  postinst  prerm  rules
debian/patches/: 0064bit.dpatch  00list  01elf-rewrite.dpatch  02demangle.dpatch  03syscallent-update.dpatch
etc/: ltrace.conf  ltrace.rc
include/hck/: ctype.h  syscall.h
lib/: libtrace.so.1
src/: Makefile  init_libtrace.c
src/libtrace/: Makefile  TODO  __setfpucw.c  atoi.c  bcopy.c  getenv.c  init_libtrace-old.c  init_libtrace.c  libtrace.c  libtrace.s  print_results-old.c  print_results.c  printf.c  sprintf.c  strcat.c  strcmp.c  strlen.c  strncmp.c  strnlen.c  unsetenv.c  vsprintf.c
src/ltrace/: Makefile  ltrace.c
src/test/: Makefile  kk.c  kk.s  libtest.c  libtest.s  test.c
sysdeps/: Makefile.am  README  sysdep.h
sysdeps/Linux/: Makefile  README  mksyscallent  mksyscalls  proc.c  trace.c
sysdeps/Linux/arm/: Makefile  arch.h  breakpoint.c  regs.c  signalent.h  syscallent.h  trace.c
sysdeps/Linux/i386/: arch.h  breakpoint.c  regs.c  syscallent.h  trace.c
sysdeps/Linux/m68k/: Makefile  arch.h  breakpoint.c  syscallent.h  syscallent.h-
sysdeps/Linux/sparc/: Makefile  arch.h  breakpoint.c  regs.c  syscallent.h  trace.c
sysdeps/linux-gnu/: Makefile  Makefile.am  README  arch_mksyscallent  breakpoint.c  events.c  mksignalent  mksyscallent  mksyscallent_mips  mksyscallent_s390  proc.c  trace.c
sysdeps/linux-gnu/alpha/: Makefile  arch.h  plt.c  regs.c  signalent.h  syscallent.h  trace.c
sysdeps/linux-gnu/arm/: Makefile  Makefile.am  arch.h  arch_syscallent.h  breakpoint.c  plt.c  ptrace.h  regs.c  signalent.h  syscallent.h  trace.c
sysdeps/linux-gnu/cris/: arch.h  plt.c  ptrace.h  regs.c  signalent.h  syscallent.h  trace.c
sysdeps/linux-gnu/i386/: arch.h  breakpoint.c  plt.c  regs.c  syscallent.h  trace.c
sysdeps/linux-gnu/ia64/: Makefile  Makefile.am  arch.h  breakpoint.c  plt.c  regs.c  syscallent.h  trace.c
sysdeps/linux-gnu/m68k/: arch.h  breakpoint.c  plt.c  regs.c  signalent.h  syscallent.h  trace.c
sysdeps/linux-gnu/mipsel/: Doxyfile  Makefile  Makefile.am  arch.h  mipsel.h  plt.c  regs.c  signalent.h  syscallent.h  trace.c
sysdeps/linux-gnu/ppc/: Makefile  Makefile.am  arch.h  plt.c  ptrace.h  regs.c  signalent.h  syscallent.h  trace.c
sysdeps/linux-gnu/s390/: Makefile  Makefile.am  arch.h  breakpoint.c  plt.c  regs.c  signalent.h  signalent1.h  syscallent.h  syscallent1.h  syscalls31.h  syscalls64.h  trace.c
sysdeps/linux-gnu/sparc/: Makefile  Makefile.am  arch.h  plt.c  ptrace.h  regs.c  signalent.h  syscallent.h  trace.c
sysdeps/linux-gnu/x86_64/: Makefile  Makefile.am  arch.h  ffcheck.c  plt.c  ptrace.h  regs.c  signalent1.h  syscallent.h  syscallent1.h  trace.c
test/: Makefile  hacks.c  test2  test2.c
tests/: execl  execl.c  fork  fork.c  hello  hello.c  int  kill  kill.c  kill.s  kill2  kill2.s  kill3.s  trap  trap.c
testsuite/: Makefile  Makefile.am  Makefile.in  README  run-my-tests.sh
testsuite/config/: unix.exp
testsuite/lib/: compiler.c  compiler.cc  ltrace.exp
testsuite/ltrace.main/: Makefile  Makefile.am  Makefile.in  main-internal-1.c  main-internal.c  main-internal.exp  main-lib.c  main.c  main.exp  parameters-lib.c  parameters.c  parameters.conf  parameters.exp  signals.c  signals.exp  system_calls.c  system_calls.exp
testsuite/ltrace.minor/: Makefile  Makefile.am  Makefile.in  attach-process.c  attach-process.exp  count-record.c  count-record.exp  demangle-lib.cpp  demangle.cpp  demangle.exp  demangle.h  libdl-simple-lib.c  libdl-simple.c  libdl-simple.exp  print-instruction-pointer.c  print-instruction-pointer.exp  time-record-T.exp  time-record-tt.exp  time-record-ttt.exp  time-record.c  trace-clone.c  trace-clone.exp  trace-exec.c  trace-exec.exp  trace-exec1.c  trace-fork.c  trace-fork.exp
testsuite/ltrace.torture/: Makefile  Makefile.am  Makefile.in  ia64-sigill.exp  ia64-sigill.s  signals.c  signals.exp
