# Copyright (C) 1992 - 2001 Free Software Foundation, Inc.
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 1, or (at your option)
# any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
#

EXTRA_DIST = \
	main-lib.c \
	main.c \
	main.exp \
	main-internal.c \
	main-internal-1.c \
	main-internal.exp \
	parameters-lib.c \
	parameters.c \
	parameters.conf \
	parameters.exp \
	signals.c \
	signals.exp \
	system_calls.c \
	system_calls.exp

CLEANFILES = *.o *.so *.log *.sum *.ltrace setval.tmp \
	main main-internal parameters signals system_calls

MAINTAINERCLEANFILES = Makefile.in
